--- a/challenge1/index.html
+++ b/challenge1/index.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <title>CSS challenge</title>
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <!-- NAV BAR - DON'T TOUCH ME -->
     <div class="w3-bar w3-black">
-        <a href="/index.html" class="w3-bar-item w3-button">Home</a>
-        <a href="/challenge1/index.html" class="w3-bar-item w3-button">challenge 1</a>
-        <a href="/challenge2/index.html" class="w3-bar-item w3-button">challenge 2</a>
-        <a href="/challenge3/index.html" class="w3-bar-item w3-button">challenge 3</a>
-        <a href="/challenge4/index.html" class="w3-bar-item w3-button">challenge 4</a>
+      <a href="/index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="/challenge1/index.html" class="w3-bar-item w3-button"
+        >challenge 1</a
+      >
+      <a href="/challenge2/index.html" class="w3-bar-item w3-button"
+        >challenge 2</a
+      >
+      <a href="/challenge3/index.html" class="w3-bar-item w3-button"
+        >challenge 3</a
+      >
+      <a href="/challenge4/index.html" class="w3-bar-item w3-button"
+        >challenge 4</a
+      >
     </div>
 
-    <!-- YOUR CODE DOWN HERE  -->
-
-</body>
-
+    <div class="image">
+        <img
+          src="/assets/harrypotter.jpg"
+          alt=""
+          width="300 px"
+          height="300px"
+        />
+      </div>
+  
+      <div class="description">
+        <p>Harry Potter & the philsophes's stone</p>
+        <p>The story of harry poter with his friends.</p>
+      </div>
+    </body>
+  </html>
+  
+  </body>
 </html>
